gedcom/tests/snapshots/tests__golden_files@invalid_level_error.ged.snap
---
source: gedcom/tests/tests.rs
expression: "format!(\"{:?}\",\n    miette::Report::new(err).with_source_code(NamedSource::new(filename.to_string_lossy(),\n    data)))"
input_file: gedcom/tests/test_inputs/invalid_level_error.ged
---
gedcom::parse_error::invalid_level

  × Line syntax error
  ├─▶ Invalid non-numeric level 'x'
  ╰─▶ invalid digit found in string
   ╭─[invalid_level_error.ged:1:1]
 1 │ x y z
   · ┬
   · ╰── this is not a (positive) number
   ╰────
